# DuckShell

./: .gitattributes  .gitignore  .output.txt  CMakeCache.txt  CMakeLists.txt  DOWNLOAD_TROUBLESHOOTING.md  Makefile  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_MANAGEMENT_FEATURES.md  README.md  README_zh-CN.md  build_test.sh  cmake-multi-platform.yml  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-98a03147db0d4ef7c06e.json  cache-v2-c33116c7ae73f15123c6.json  cache-v2-e5b6d53a7bbb9c9ed0c3.json  cache-v2-fe02c6bb5db6f70caf40.json  cmakeFiles-v1-4194237aff090b5e7966.json  cmakeFiles-v1-608d96cc9c8419d46ce1.json  cmakeFiles-v1-76529d46f113153e2df6.json  codemodel-v2-1a6af21ab80324683c24.json  codemodel-v2-297c739b1e96dba10fd2.json  codemodel-v2-2b3505cb6a68922dfc14.json  codemodel-v2-70750b783d464d426c93.json  codemodel-v2-8343e5d1abcfdc21ab02.json  codemodel-v2-ceae5a4c2e1bfd697e15.json  codemodel-v2-d49461f0aef42f0604e2.json  directory-_deps.zlib-build-Debug-a0e2a3483250bed2fe93.json  index-2025-12-06T14-41-06-0381.json  index-2025-12-06T15-52-34-0298.json  index-2025-12-06T16-54-21-0350.json  index-2025-12-06T17-00-33-0876.json  index-2025-12-09T17-41-39-0146.json  index-2026-01-08T13-01-23-0656.json  index-2026-01-08T13-09-05-0936.json  target-DuckShell-Debug-0c2c334622f4060dd745.json  target-DuckShell-Debug-2ba25ee6c69d4c12b311.json  target-DuckShell-Debug-2f78d8697ec4adc816e7.json  target-DuckShell-Debug-a3f0d77940182ddce77e.json  target-DuckShell-Debug-b2d01c1b0a50f2d96309.json  target-DuckShell-Debug-d697324b021565beae26.json  target-Git__Git-Debug-3875f963931d9c878c09.json  target-Git__Git-Debug-fa454e529f5cbcc75dfb.json  target-example-Debug-c4478e224282ee5f1cc6.json  target-example64-Debug-b82f03f2e83d854668d6.json  target-minigzip-Debug-43ad89443c213909bf30.json  target-minigzip64-Debug-0f6d0278ce9a1b13b021.json  target-minizip-Debug-47fcd5662aece64c642e.json  target-minizip-Debug-db1d6d1fe735ef094e25.json  target-zlib-Debug-1f43239c6e3c6e387495.json  target-zlibstatic-Debug-cde17027ced526582af1.json  toolchains-v1-f907b1868b0cdc37c486.json
.github/workflows/: cmake-multi-platform.yml  linux.yml  macos.yml  windows.yml
ExamplePlugins/HelloWorld/src/: main.cpp  plugins_interface.h
src/: global_vars.cpp  global_vars.h  header.h  main.cpp  plugin_system.h  shell_system.h  version.h  version.h.in
src/plugins/: plugin_common.cpp  plugin_common.h  plugin_executor.cpp  plugin_executor.h  plugin_installer.cpp  plugin_installer.h  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  plugin_repository.cpp  plugin_repository.h  plugins_interface.h  plugins_manager.cpp  plugins_manager.h
src/shell/: main_shell.cpp  shell_commands.cpp  shell_commands.h  shell_input.cpp  shell_input.h  shell_main.cpp
